# lab05

./: CMakeLists.txt  example1
.github/workflows/: ci.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  example2  install_manifest.txt
include/: Account.h  IValidator.h  Transaction.h
src/: Account.cpp  Transaction.cpp
tests/: test1.cpp  test_account.cpp  test_mock.cpp  test_transfer.cpp
